force-app/main/default/objects/Lead/fields/ai_company_industry__c.field-meta.xml
<CustomField>
    <fullName>ai_company_industry__c</fullName>
    <label>ai_company_industry</label>
    <type>TextArea</type>
</CustomField>