force-app/main/default/objects/Lead/fields/ai_company_pain_points__c.field-meta.xml
<CustomField>
    <fullName>ai_company_pain_points__c</fullName>
    <label>ai_company_pain_points</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>