force-app/main/default/objects/Lead/fields/ai_company_summary__c.field-meta.xml
<CustomField>
    <fullName>ai_company_summary__c</fullName>
    <label>ai_company_summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>