force-app/main/default/objects/Lead/fields/ai_company_uses_cicd__c.field-meta.xml
<CustomField>
    <fullName>ai_company_uses_cicd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ai_company_uses_cicd</label>
    <type>Checkbox</type>
</CustomField>