force-app/main/default/objects/Lead/fields/ai_confidence__c.field-meta.xml
<CustomField>
    <fullName>ai_confidence__c</fullName>
    <label>ai_confidence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>