force-app/main/default/objects/Lead/fields/ai_decision_criteria_fit_score__c.field-meta.xml
<CustomField>
    <fullName>ai_decision_criteria_fit_score__c</fullName>
    <label>ai_decision_criteria_fit_score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>