force-app/main/default/objects/Lead/fields/ai_disqualification_reasons__c.field-meta.xml
<CustomField>
    <fullName>ai_disqualification_reasons__c</fullName>
    <description>Reasons to disqualify this lead</description>
    <label>ai_disqualification_reasons</label>
    <type>TextArea</type>
</CustomField>