force-app/main/default/objects/Lead/fields/ai_email__c.field-meta.xml
<CustomField>
    <fullName>ai_email__c</fullName>
    <label>ai_email</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>