force-app/main/default/objects/Lead/fields/ai_enriched__c.field-meta.xml
<CustomField>
    <fullName>ai_enriched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ai_enriched</label>
    <type>Checkbox</type>
</CustomField>