force-app/main/default/objects/Lead/fields/ai_icp_alignment_score__c.field-meta.xml
<CustomField>
    <fullName>ai_icp_alignment_score__c</fullName>
    <label>ai_icp_alignment_score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>