force-app/main/default/objects/Lead/fields/ai_icp_fit_classification__c.field-meta.xml
<CustomField>
    <fullName>ai_icp_fit_classification__c</fullName>
    <label>ai_icp_fit_classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>