force-app/main/default/objects/Lead/fields/ai_job_title_score__c.field-meta.xml
<CustomField>
    <fullName>ai_job_title_score__c</fullName>
    <label>ai_job_title_score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>