force-app/main/default/objects/Lead/fields/ai_metrics_impact_potential_score__c.field-meta.xml
<CustomField>
    <fullName>ai_metrics_impact_potential_score__c</fullName>
    <label>ai_metrics_impact_potential_score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>