force-app/main/default/objects/Lead/fields/ai_person_decision_maker_signals__c.field-meta.xml
<CustomField>
    <fullName>ai_person_decision_maker_signals__c</fullName>
    <label>ai_person_decision_maker_signals</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>