force-app/main/default/objects/Lead/fields/ai_qualification_status__c.field-meta.xml
<CustomField>
    <fullName>ai_qualification_status__c</fullName>
    <label>ai_qualification_status</label>
    <length>64</length>
    <type>Text</type>
</CustomField>