force-app/main/default/objects/Lead/fields/ai_recommended_next_action__c.field-meta.xml
<CustomField>
    <fullName>ai_recommended_next_action__c</fullName>
    <label>ai_recommended_next_action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>