force-app/main/default/objects/Lead/fields/ai_score__c.field-meta.xml
<CustomField>
    <fullName>ai_score__c</fullName>
    <label>ai_score</label>
    <length>20</length>
    <type>Text</type>
</CustomField>