force-app/main/default/objects/Lead/fields/Billing_Email__c.field-meta.xml
<CustomField>
    <fullName>Billing_Email__c</fullName>
    <label>Billing_Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>