force-app/main/default/objects/Lead/listViews/All_Leads.listView-meta.xml
<ListView>
    <fullName>All_Leads</fullName>
    <columns>LEAD.TITLE</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>ai_email__c</columns>
    <columns>ai_enriched__c</columns>
    <columns>ai_score__c</columns>
    <columns>ai_qualification_status__c</columns>
    <columns>ai_disqualification_reasons__c</columns>
    <columns>ai_industry_relevance_score__c</columns>
    <columns>ai_company_size_score__c</columns>
    <columns>ai_valid_email_score__c</columns>
    <columns>ai_job_title_score__c</columns>
    <columns>ai_isv_status_score__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LAST_UPDATE</field>
        <operation>greaterOrEqual</operation>
        <value>11/30/2025 12:00 AM</value>
    </filters>
    <label>All Leads</label>
</ListView>